@@ -1,3 +1,7 @@
+2013-08-21 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/RcppArmadilloWrap.h: Less data copies for wrap< SpMat<T> >
+
 2013-08-20 Romain Francois <romain@r-enthusiasts.com>
 
         * include/RcppArmadilloWrap.h: Handle wrap<subview>
